--- a/index.html
+++ b/index.html
@@ -237,23 +237,23 @@
 <div class="info-container">
         <!--<h2 class="pozice">QE</h2>-->
         <h1 class="name">Maryna Skyba</h1>
-        <p class="description">"I decided to change my direction of work. And right now I am very into my new IT sfere."</p>
+        <p class="description prof-period">"I decided to change my direction of work. And right now I am very into my new IT sfere. Currently I'm starting to study React at <a href="https://goit.ua/">GOIT</a> courses and already have finished HTML5,CSS and JavaScript"</p>
 </div>
 
-<!--projects container
+<!--projects container-->
    <div class="project-contajner">
-       <h3 class="about-me-title">Projects</h3>
+       <h3 class="about-me-title">Projects on GOIT</h3>
          <ol>
             <li class="projects-item" > 
                 <a class="projects-link"
-                 href="https://lovecamp.goit.ua/">
-                 https://lovecamp.goit.ua/
+                 href="https://github.com/JulieJud/5th-element-team-proj">
+                 Comand project HTML and CSS
                 </a>
                 <span class="dots">...................................</span>
                 <span><b>[</b><span class="tech-name"> HTML5, CSS3 </span><b>]</b></span>
 
             </li>
-            <li class="projects-item" > 
+            <!-- <li class="projects-item" > 
                  <a class="projects-link" 
                  href="https://cryptohub.goit.ua/">
                  https://cryptohub.goit.ua/
@@ -268,9 +268,9 @@
                 </a>
                 <span class="dots">..................................</span>
                 <span><b>[</b><span class="tech-name"> React.js, Node.js </span><b>]</b></span>
-                </li>
+                </li> -->
        </ol>
-   </div>-->
+   </div>
 <!--Work experience-->
 <div>
     <h3 class="about-me-title">Work Experience</h3>
