--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <div class="info-container">
         <!--<h2 class="pozice">QE</h2>-->
         <h1 class="name">Maryna Skyba</h1>
-        <p class="description prof-period">"I decided to change my direction of work. And right now I am very into my new IT sfere. Currently I'm starting to study React at <a href="https://goit.ua/">GOIT</a> courses and already have finished HTML5,CSS and JavaScript"</p>
+        <p class="description prof-period">"I decided to change my direction of work. And right now I am very into my new IT sphere. Currently I'm starting to study React at <a href="https://goit.ua/">GOIT</a> courses and already have finished HTML5,CSS and JavaScript"</p>
 </div>
 
 <!--projects container-->
