--- a/index.html
+++ b/index.html
@@ -247,24 +247,24 @@
             <li class="projects-item" > 
                 <a class="projects-link"
                  href="https://github.com/JulieJud/5th-element-team-proj">
-                 Comand project HTML and CSS
+                 Command project HTML and CSS
                 </a>
                 <span class="dots">...................................</span>
                 <span><b>[</b><span class="tech-name"> HTML5, CSS3 </span><b>]</b></span>
 
             </li>
-            <!-- <li class="projects-item" > 
-                 <a class="projects-link" 
-                 href="https://cryptohub.goit.ua/">
-                 https://cryptohub.goit.ua/
-                </a>
-                <span class="dots">..................................</span>
-                <span><b>[</b><span class="tech-name"> JavaScript </span><b>]</b></span>
-                </li>
             <li class="projects-item" > 
                  <a class="projects-link" 
-                 href="https://kidslike.goit.co.ua/">
-                 https://kidslike.goit.co.ua/
+                 href="https://github.com/MarynaSkyba/comand-project-filmoteka">
+                Command Project JavaScript
+                </a>
+                <span class="dots">............................................</span>
+                <span><b>[</b><span class="tech-name"> JavaScript </span><b>]</b></span>
+                </li>
+            <!-- <li class="projects-item" > 
+                 <a class="projects-link" 
+                 href="">
+                Command Project React
                 </a>
                 <span class="dots">..................................</span>
                 <span><b>[</b><span class="tech-name"> React.js, Node.js </span><b>]</b></span>
