--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <svg class="contacts__icon-star" width="16" height="20">
                                         <use href="./img/icons.svg#icon-star-full"></use> 
                                     </svg><svg class="contacts__icon-star" width="16" height="20">
-                                        <use href="./img/icons.svg#icon-star-empty"></use>
+                                        <use href="./img/icons.svg#icon-star-full"></use>
                                     </svg><svg class="contacts__icon-star" width="16" height="20">
                                         <use href="./img/icons.svg#icon-star-empty"></use>
                                     </svg>
