--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="contacts-item">
                   <a class="mobil" href="tel:+380676587724">  <svg class="contacts__icon" width="20" height="20">
                     <use href="./img/icons.svg#icon-mobile"></use>
-                </svg>  +38 067 658 77 24</a>
+                </svg>  +34 643 132 121</a>
                 </div>
 
                 <div class="contacts-item">
@@ -150,7 +150,7 @@
         <!--<h2 class="pozice">QE</h2>-->
         <h1 class="name">Maryna Skyba</h1>
         <h3 class="about-me-title">SUMMARY</h3>
-        <p class="description prof-period">I decided to change my direction of work. And right now I am very into my new IT sphere. Currently I'm finishing to study React at <a href="https://goit.ua/">GOIT</a> courses and already finished HTML5,CSS and JavaScript</p>
+        <p class="description prof-period"> I'm a FullStack Developer. And right now I am very into my new IT sphere and would like to develop my professional skills.  I am looking for a position Junior Frontend Developer or Junior FullStack Developer and remote job. </p>
 </div>
 
 <!--projects container-->
@@ -287,7 +287,7 @@
                 <p class="prof-color">GoIt</p>
                 <p class="studies-item">Full Stack Developer</p>
                 <span class="prof-period">
-                    2006 - 2011 <span class="prof-stick">|</span> Jan 2021- Oct 2021
+                    2006 - 2011 <span class="prof-stick">|</span> Jan 2021- Jan 2022
                  </span>
             </li>
             
