--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <!--<h2 class="pozice">QE</h2>-->
         <h1 class="name">Maryna Skyba</h1>
         <h3 class="about-me-title">SUMMARY</h3>
-        <p class="description prof-period"> I'm a FullStack Developer. And right now I am very into my new IT sphere and would like to develop my professional skills.  I am looking for a position Junior Frontend Developer or Junior FullStack Developer and remote job. </p>
+        <p class="description prof-period"> I'm a FullStack Developer. And right now I am very into my new IT sphere and would like to develop my professional skills.  I am looking for a position Junior Frontend Developer or Junior FullStack Developer(remote job). </p>
 </div>
 
 <!--projects container-->
